# caliban

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deny.toml
caliban/: Cargo.toml  README.md  build.rs
caliban/src/: agents_cli.rs  args.rs  attach.rs  diagnostics.rs  effective_model.rs  hook_inherit.rs  main.rs  perms_cli.rs  plugin_cli.rs  provider_wiring.rs  refreshing_provider.rs  repl.rs  router.rs  settings_cli.rs  startup.rs  stream_decode.rs  subcommands.rs  system_prompt.rs  tui.rs  version.rs  worker.rs
caliban/src/headless/: budget.rs  cli.rs  encoder.rs  events.rs  hooks_sink.rs  input.rs  mod.rs  schema.rs  session_loader.rs
caliban/src/startup/: compose.rs  drivers.rs  mod.rs
caliban/src/tui/: app.rs  ask.rs  attach.rs  clipboard.rs  completer.rs  events.rs  external_editor.rs  input.rs  mouse_select.rs  overlay.rs  render.rs  reverse_history.rs  shell_escape.rs  slash.rs  toast.rs  transcript_viewer.rs
caliban/tests/: agent_loop.rs  agent_worker.rs  cli.rs  cli_diagnostics.rs  config_cli.rs  headless.rs  it_settings_model_and_helper.rs  perms_cli.rs  plugin_cli.rs  prompt_cache.rs  settings_cli.rs
crates/caliban-agent-core/: Cargo.toml
crates/caliban-agent-core/src/: agent.rs  auto_mode.rs  cache.rs  compact.rs  decision_log.rs  deferred_block.rs  error.rs  hooks.rs  hooks_config.rs  hooks_router.rs  lib.rs  mcp_activation.rs  mode_filter.rs  permission_mode.rs  permissions.rs  permissions_matcher.rs  plan_mode.rs  post_process.rs  registry.rs  retry.rs  session.rs  stream.rs  todos.rs  tool.rs  turn.rs  wire_filter.rs
crates/caliban-agent-core/tests/: cache_marker.rs  compact_auto.rs  compact_micro.rs  compactors.rs  config_hooks.rs  deferred_block.rs  dispatch_events.rs  empty_turn_nudge.rs  execute_tool_span.rs  genai_content_off.rs  genai_content_on.rs  genai_span.rs  hook_failure.rs  hook_turn_decision.rs  hooks_config_load.rs  hooks_events.rs  hooks_http.rs  hooks_shell.rs  integration.rs  interactive_input.rs  mcp_activation.rs  midstream_retry.rs  model_swap.rs  no_edit_nudge.rs  parallel_conflict_key.rs  parallel_tools.rs  plan_mode_gating.rs  recovery_context.rs  recovery_max_tokens.rs  recovery_refusal.rs  recovery_stream_idle.rs  retry_backoff.rs  run_span_nesting.rs  streaming.rs  thinking_budget_guard.rs  token_aggregation.rs  tool_registry.rs  tool_result_cap.rs  tool_result_payload.rs  wire_filter.rs
crates/caliban-checkpoint/: Cargo.toml
crates/caliban-checkpoint/src/: error.rs  hook.rs  lib.rs  manifest.rs  prune.rs  recorder.rs  restore.rs  store.rs
crates/caliban-checkpoint/tests/: checkpoint_root_env.rs  disabled_env.rs  hooks_fire_during_run.rs  plan_mode_marker.rs
crates/caliban-common/: Cargo.toml
crates/caliban-common/src/: expand.rs  frontmatter.rs  fs.rs  glob_match.rs  http.rs  lib.rs  paths.rs  tracing_targets.rs
crates/caliban-common/tests/: no_bare_platform_dirs.rs
crates/caliban-core/: Cargo.toml
crates/caliban-core/src/: lib.rs
crates/caliban-images/: Cargo.toml
crates/caliban-images/src/: blob.rs  clipboard.rs  cost.rs  dnd.rs  graphics.rs  lib.rs  pipeline.rs  placeholder.rs  routing.rs
crates/caliban-mcp-client/: Cargo.toml
crates/caliban-mcp-client/src/: client.rs  config.rs  elicitation.rs  error.rs  lib.rs  manager.rs  oauth.rs  permissions.rs  registry.rs  resource.rs  tool.rs
crates/caliban-mcp-client/tests/: gonzalo_integration.rs  http_integration.rs  oauth_integration.rs  permissions_integration.rs  resource_integration.rs  stdio_integration.rs
crates/caliban-memory/: Cargo.toml
crates/caliban-memory/src/: ancestry_addendum.rs  auto.rs  config.rs  error.rs  init_import.rs  lib.rs  loader.rs  prefix.rs  project_imports.rs  project_walk.rs  rules.rs  sanitize.rs  walk.rs
crates/caliban-memory/tests/: end_to_end.rs  walk_imports_roundtrip.rs
crates/caliban-model-router/: Cargo.toml
crates/caliban-model-router/src/: breaker.rs  builder.rs  cache.rs  capabilities.rs  config.rs  discovery.rs  dispatch.rs  effort.rs  error.rs  fallback.rs  hedging.rs  lib.rs  provider_impl.rs  resolver.rs  tests.rs
crates/caliban-output-styles/: Cargo.toml
crates/caliban-output-styles/src/: learning.rs  lib.rs  loader.rs  prefix.rs  registry.rs  style.rs
crates/caliban-output-styles/tests/: styles.rs
crates/caliban-plugins/: Cargo.toml
crates/caliban-plugins/src/: aggregate.rs  cli.rs  discovery.rs  error.rs  expand.rs  filter.rs  lib.rs  loaded.rs  manager.rs  manifest.rs  marketplace.rs  overlay.rs  trust.rs
crates/caliban-provider/: Cargo.toml
crates/caliban-provider-anthropic/: Cargo.toml
crates/caliban-provider-anthropic/src/: config.rs  error.rs  ir_convert.rs  lib.rs  models.rs  stream_parse.rs
crates/caliban-provider-anthropic/tests/: bedrock_unit.rs  direct_fixture.rs  direct_stream.rs  image_serialization.rs  tool_choice.rs  vertex_unit.rs
crates/caliban-provider-bedrock/: Cargo.toml
crates/caliban-provider-bedrock/src/: auth.rs  config.rs  error.rs  lib.rs  models.rs
crates/caliban-provider-bedrock/tests/: bedrock_provider.rs
crates/caliban-provider-google/: Cargo.toml
crates/caliban-provider-google/src/: config.rs  error.rs  ir_convert.rs  lib.rs  models.rs  stream_parse.rs
crates/caliban-provider-google/tests/: ai_studio_fixture.rs  ai_studio_stream.rs  image_serialization.rs  vertex_unit.rs
crates/caliban-provider-ollama/: Cargo.toml
crates/caliban-provider-ollama/src/: config.rs  discovery.rs  error.rs  ir_convert.rs  lib.rs  models.rs  stream_parse.rs
crates/caliban-provider-ollama/tests/: context_window.rs  direct_fixture.rs  direct_stream.rs  direct_tool_loop_and_thinking.rs
crates/caliban-provider-openai/: Cargo.toml
crates/caliban-provider-vertex/: Cargo.toml
crates/caliban-sandbox/: Cargo.toml  README.md
crates/caliban-sessions/: Cargo.toml
crates/caliban-settings/: Cargo.toml
crates/caliban-skills/: Cargo.toml
crates/caliban-supervisor/: Cargo.toml
crates/caliban-telemetry/: Cargo.toml  rates.yaml
crates/caliban-tools-builtin/: Cargo.toml
crates/caliban-worktrees/: Cargo.toml
docs/: TODO.md  (+11 more)
(+508 files in other folders)
