[workspace]
resolver = "2"
members = [
    "crates/caliban-core",
    "crates/caliban-provider",
    "crates/caliban-provider-anthropic",
    "crates/caliban-provider-openai",
    "caliban",
]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
authors = ["John Ford <john.ford2002@gmail.com>"]
rust-version = "1.85"
# repository = TODO: set once the GitHub repo exists

[workspace.dependencies]
tokio     = { version = "1", features = ["full"] }
thiserror = "1"
anyhow    = "1"
async-trait        = "0.1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures            = "0.3"
secrecy            = { version = "0.10", features = ["serde"] }
eventsource-stream = "0.2"
url                = { version = "2", features = ["serde"] }
bytes              = "1"
http               = "1"
aws-config             = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
aws-smithy-types       = "1"
gcp_auth               = "0.12"
wiremock = "0.6"
proptest = "1"

[workspace.lints.rust]
unsafe_code      = "forbid"
missing_docs     = "warn"
unreachable_pub  = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo    = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
