[workspace]
resolver = "2"
members = [
    "crates/caliban-core",
    "crates/caliban-provider",
    "crates/caliban-provider-anthropic",
    "crates/caliban-provider-openai",
    "crates/caliban-provider-ollama",
    "crates/caliban-provider-google",
    "crates/caliban-agent-core",
    "crates/caliban-tools-builtin",
    "crates/caliban-sessions",
    "crates/caliban-memory",
    "crates/caliban-skills",
    "crates/caliban-mcp-client",
    "caliban",
]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
authors = ["John Ford <john.ford2002@gmail.com>"]
rust-version = "1.95"
# repository = TODO: set once the GitHub repo exists

[workspace.dependencies]
tokio     = { version = "1", features = ["full"] }
thiserror = "1"
anyhow    = "1"
async-trait        = "0.1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "http2", "hickory-dns"] }
futures            = "0.3"
secrecy            = { version = "0.10", features = ["serde"] }
eventsource-stream = "0.2"
async-stream        = "0.3"
url                = { version = "2", features = ["serde"] }
bytes              = "1"
http               = "1"
aws-config             = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
aws-smithy-types       = "1"
gcp_auth               = "0.12"
wiremock = "0.6"
proptest = "1"
tokio-util = { version = "0.7" }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand       = "0.8"
globset       = "0.4"
ignore        = "0.4"
grep-regex    = "0.1"
grep-searcher = "0.1"
grep-matcher  = "0.1"
tempfile      = "3"
nucleo-matcher = "0.3"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
dirs   = "5"
toml   = "0.8"

[workspace.lints.rust]
unsafe_code      = "deny"  # was forbid; relaxed so localized #[allow(unsafe_code)] with safety comments can apply (e.g., libc::kill in caliban-tools-builtin's Bash tool process-group cleanup)
missing_docs     = "warn"
unreachable_pub  = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo    = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
# Transitive-dep version skew is noisy when pulling in well-maintained crates
# whose ecosystems track different release cadences (e.g. htmd → html5ever
# pulls rand 0.9 while reqwest / tracing-subscriber transitively use rand 0.8).
# Real cargo-level issues (wildcard deps, missing fields) still trip.
multiple_crate_versions = "allow"
