[workspace]
resolver = "2"
members = [
    "crates/caliban-common",
    "crates/caliban-provider",
    "crates/caliban-provider-anthropic",
    "crates/caliban-provider-bedrock",
    "crates/caliban-provider-vertex",
    "crates/caliban-provider-openai",
    "crates/caliban-provider-ollama",
    "crates/caliban-provider-google",
    "crates/caliban-agent-core",
    "crates/caliban-tools-builtin",
    "crates/caliban-sessions",
    "crates/caliban-checkpoint",
    "crates/caliban-memory",
    "crates/caliban-output-styles",
    "crates/caliban-skills",
    "crates/caliban-mcp-client",
    "crates/caliban-model-router",
    "crates/caliban-sandbox",
    "crates/caliban-plugins",
    "crates/caliban-telemetry",
    "crates/caliban-images",
    "crates/caliban-worktrees",
    "crates/caliban-supervisor",
    "crates/caliban-settings",
    "caliban",
]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
authors = ["John Ford <john.ford2002@gmail.com>"]
rust-version = "1.95"
# repository = TODO: set once the GitHub repo exists

[workspace.dependencies]
tokio     = { version = "1", features = ["full"] }
thiserror = "1"
anyhow    = "1"
async-trait        = "0.1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "http2", "hickory-dns"] }
futures            = "0.3"
secrecy            = { version = "0.10", features = ["serde"] }
eventsource-stream = "0.2"
async-stream        = "0.3"
url                = { version = "2", features = ["serde"] }
bytes              = "1"
http               = "1"
aws-config             = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
aws-smithy-types       = "1"
gcp_auth               = "0.12"
wiremock = "0.6"
axum     = { version = "0.7", default-features = false, features = ["tokio", "http1", "query"] }
proptest = "1"
tokio-util = { version = "0.7" }
arc-swap   = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand       = "0.8"
globset       = "0.4"
ignore        = "0.4"
grep-regex    = "0.1"
grep-searcher = "0.1"
grep-matcher  = "0.1"
tempfile      = "3"
nucleo-matcher = "0.3"
uuid          = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
dirs   = "5"
toml   = "0.8"
rmcp   = { version = "1.7", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    # `transport-streamable-http-client-reqwest` only enables `__reqwest`
    # (pulls reqwest as a dep). The separate `reqwest` feature is what
    # enables `reqwest?/rustls` so rmcp's default reqwest::Client speaks
    # https. Without it, the streamable-http worker rejects any https URL
    # with hyper-util's "invalid URL, scheme is not http" connect error.
    # rmcp 1.7 pins reqwest 0.13 transitively, so our workspace
    # `reqwest = "0.12"` rustls-tls feature does not unify across the
    # major bump and cannot fix this from the outside.
    "reqwest",
] }
oauth2  = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
schemars = "1"
sha2   = "0.10"
semver = { version = "1", features = ["serde"] }
tar    = "0.4"
flate2 = "1"
base64 = "0.22"
image  = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
infer  = { version = "0.16", default-features = false }
arboard = { version = "3", default-features = false, features = ["image-data"] }
# ADR 0037 deps (sub-agent worktree isolation + supervisor daemon).
git2         = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
interprocess = { version = "2", features = ["tokio"] }
nix          = { version = "0.30", features = ["signal", "process"] }
bincode      = { version = "1" }
# ADR 0026 deps (settings hierarchy).
notify     = { version = "6", default-features = false, features = ["macos_kqueue"] }
jsonschema = { version = "0.17", default-features = false }

# Release profile tuning (PR-T4-C). LTO + single codegen unit + symbol strip
# trades cold-build time for smaller, faster release binaries. The `thin`
# LTO level keeps build cost moderate while still inlining across crate
# boundaries; codegen-units = 1 maximises optimisation opportunities;
# `strip = "symbols"` drops debuginfo + symbol tables from the artefact.
[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[workspace.lints.rust]
unsafe_code      = "deny"  # was forbid; relaxed so localized #[allow(unsafe_code)] with safety comments can apply (e.g., libc::kill in caliban-tools-builtin's Bash tool process-group cleanup)
missing_docs     = "warn"
unreachable_pub  = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo    = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
# Transitive-dep version skew is noisy when pulling in well-maintained crates
# whose ecosystems track different release cadences (e.g. htmd → html5ever
# pulls rand 0.9 while reqwest / tracing-subscriber transitively use rand 0.8).
# Real cargo-level issues (wildcard deps, missing fields) still trip.
multiple_crate_versions = "allow"
