[package]
name        = "caliban"
version     = "0.0.0"
description = "User-facing binary for the caliban agent harness"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
publish     = false

[[bin]]
name = "caliban"
path = "src/main.rs"

[dependencies]
caliban-provider           = { path = "../crates/caliban-provider" }
caliban-provider-anthropic = { path = "../crates/caliban-provider-anthropic" }
caliban-provider-openai    = { path = "../crates/caliban-provider-openai" }
caliban-provider-ollama    = { path = "../crates/caliban-provider-ollama" }
caliban-provider-google    = { path = "../crates/caliban-provider-google" }
caliban-agent-core         = { path = "../crates/caliban-agent-core" }
caliban-sessions           = { path = "../crates/caliban-sessions" }
caliban-tools-builtin      = { path = "../crates/caliban-tools-builtin" }
caliban-memory             = { path = "../crates/caliban-memory" }
anyhow                     = { workspace = true }
clap                       = { version = "4", features = ["derive", "env"] }
tokio                      = { workspace = true, features = ["full"] }
tokio-util                 = { workspace = true }
futures                    = { workspace = true }
dirs                       = { workspace = true }
serde_json                 = { workspace = true }
tracing                    = { workspace = true }
tracing-subscriber         = { workspace = true }
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
nucleo-matcher           = { workspace = true }
ignore                   = { workspace = true }
thiserror                = { workspace = true }
reqwest                  = { workspace = true }

[dev-dependencies]
caliban-provider = { path = "../crates/caliban-provider", features = ["mock"] }
tempfile         = { workspace = true }
tokio-util       = { workspace = true }
wiremock         = { workspace = true }
async-trait      = { workspace = true }
secrecy          = { workspace = true }
url              = { workspace = true }
serde_json       = { workspace = true }

[lints]
workspace = true
