[package]
name        = "caliban"
version.workspace = true
description = "User-facing binary for the caliban agent harness"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
publish     = false

[[bin]]
name = "caliban"
path = "src/main.rs"

[dependencies]
caliban-common             = { path = "../crates/caliban-common" }
caliban-provider           = { path = "../crates/caliban-provider" }
caliban-provider-anthropic = { path = "../crates/caliban-provider-anthropic" }
caliban-provider-openai    = { path = "../crates/caliban-provider-openai" }
caliban-provider-ollama    = { path = "../crates/caliban-provider-ollama" }
caliban-provider-google    = { path = "../crates/caliban-provider-google" }
caliban-agent-core         = { path = "../crates/caliban-agent-core" }
caliban-sessions           = { path = "../crates/caliban-sessions" }
caliban-checkpoint         = { path = "../crates/caliban-checkpoint" }
caliban-tools-builtin      = { path = "../crates/caliban-tools-builtin" }
caliban-memory             = { path = "../crates/caliban-memory" }
caliban-output-styles      = { path = "../crates/caliban-output-styles" }
caliban-skills             = { path = "../crates/caliban-skills" }
caliban-mcp-client         = { path = "../crates/caliban-mcp-client" }
caliban-model-router       = { path = "../crates/caliban-model-router" }
caliban-plugins            = { path = "../crates/caliban-plugins" }
caliban-telemetry          = { path = "../crates/caliban-telemetry" }
caliban-images             = { path = "../crates/caliban-images" }
caliban-worktrees          = { path = "../crates/caliban-worktrees" }
caliban-supervisor         = { path = "../crates/caliban-supervisor" }
caliban-settings           = { path = "../crates/caliban-settings" }
rust_decimal               = { version = "1", default-features = false }
anyhow                     = { workspace = true }
clap                       = { version = "4", features = ["derive", "env"] }
tokio                      = { workspace = true, features = ["full"] }
tokio-util                 = { workspace = true }
futures                    = { workspace = true }
dirs                       = { workspace = true }
serde                      = { workspace = true }
serde_json                 = { workspace = true }
async-trait                = { workspace = true }
tracing                    = { workspace = true }
tracing-subscriber         = { workspace = true }
base64                     = { workspace = true }
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
nucleo-matcher           = { workspace = true }
ignore                   = { workspace = true }
thiserror                = { workspace = true }
reqwest                  = { workspace = true }
secrecy                  = { workspace = true }
url                      = { workspace = true }
chrono                   = { workspace = true }
tempfile                 = { workspace = true }
uuid                     = { workspace = true }

[dev-dependencies]
caliban-provider = { path = "../crates/caliban-provider", features = ["mock"] }
tokio-util       = { workspace = true }
wiremock         = { workspace = true }
async-trait      = { workspace = true }
secrecy          = { workspace = true }
url              = { workspace = true }
serde_json       = { workspace = true }
image            = { workspace = true }

[lints]
workspace = true
