[package]
name        = "caliban"
version.workspace = true
description = "User-facing binary for the caliban agent harness"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
keywords    = ["agent", "ai", "llm", "cli", "coding-agent"]
categories  = ["command-line-utilities", "development-tools"]
readme      = "README.md"

[[bin]]
name = "caliban"
path = "src/main.rs"

[features]
# IE3 follow-up: clipboard fallback via the `arboard` crate, used when
# OSC-52 isn't honoured by the host terminal (notably some macOS
# Terminal.app configurations). Default-on so most users get the
# fallback for free. Disable with `--no-default-features` on headless
# / CI hosts that lack the X11/Wayland clipboard libs arboard needs
# at link time (libxcb on Linux). See `caliban/src/tui/clipboard.rs`.
default   = ["clipboard"]
clipboard = ["dep:arboard"]

[dependencies]
caliban-common             = { workspace = true }
caliban-provider           = { workspace = true }
caliban-provider-anthropic = { workspace = true }
caliban-provider-openai    = { workspace = true }
caliban-provider-ollama    = { workspace = true }
caliban-provider-google    = { workspace = true }
caliban-agent-core         = { workspace = true }
caliban-sessions           = { workspace = true }
caliban-checkpoint         = { workspace = true }
caliban-tools-builtin      = { workspace = true }
caliban-memory             = { workspace = true }
caliban-output-styles      = { workspace = true }
caliban-skills             = { workspace = true }
caliban-mcp-client         = { workspace = true }
caliban-model-router       = { workspace = true }
caliban-plugins            = { workspace = true }
caliban-telemetry          = { workspace = true }
caliban-images             = { workspace = true }
caliban-worktrees          = { workspace = true }
caliban-supervisor         = { workspace = true }
caliban-settings           = { workspace = true }
rust_decimal               = { version = "1", default-features = false }
anyhow                     = { workspace = true }
clap                       = { version = "4", features = ["derive", "env"] }
tokio                      = { workspace = true, features = ["full"] }
tokio-util                 = { workspace = true }
futures                    = { workspace = true }
dirs                       = { workspace = true }
serde                      = { workspace = true }
serde_json                 = { workspace = true }
async-trait                = { workspace = true }
tracing                    = { workspace = true }
tracing-subscriber         = { workspace = true }
base64                     = { workspace = true }
# IE3 follow-up: optional system-clipboard fallback. Gated behind the
# `clipboard` feature (default-on) so headless builds can opt out via
# `--no-default-features` to avoid the X11/Wayland link-time deps.
arboard                    = { workspace = true, optional = true }
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
nucleo-matcher           = { workspace = true }
ignore                   = { workspace = true }
thiserror                = { workspace = true }
reqwest                  = { workspace = true }
secrecy                  = { workspace = true }
url                      = { workspace = true }
chrono                   = { workspace = true }
tempfile                 = { workspace = true }
uuid                     = { workspace = true }
arc-swap                 = { workspace = true }

[dev-dependencies]
caliban-provider = { workspace = true, features = ["mock"] }
tokio-util       = { workspace = true }
wiremock         = { workspace = true }
async-trait      = { workspace = true }
secrecy          = { workspace = true }
url              = { workspace = true }
serde_json       = { workspace = true }
image            = { workspace = true }

[lints]
workspace = true
