[package]
name        = "caliban-agent-core"
version.workspace = true
description = "Agent loop, tool dispatch, cancellation, retry, compaction, and hooks for the caliban agent harness — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[features]
default = []

[dependencies]
caliban-common   = { workspace = true }
caliban-provider = { workspace = true }
async-stream     = { workspace = true }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
futures          = { workspace = true }
tokio            = { workspace = true }
tokio-util       = { workspace = true }
tracing          = { workspace = true }
rand             = { workspace = true }
toml             = { workspace = true }
dirs             = { workspace = true }
reqwest          = { workspace = true }
arc-swap         = { workspace = true }
sha2             = { workspace = true }
directories      = "5"
chrono           = { workspace = true }
globset          = { workspace = true }
flate2           = { workspace = true }

[dev-dependencies]
caliban-provider = { workspace = true, features = ["mock"] }
tokio            = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
proptest         = { workspace = true }
tempfile         = { workspace = true }
wiremock         = { workspace = true }

[lints]
workspace = true
