[package]
name        = "caliban-checkpoint"
version     = "0.0.0"
description = "Per-prompt checkpoint + /rewind store for the caliban agent harness (ADR 0028)"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
publish     = false

[dependencies]
caliban-agent-core = { path = "../caliban-agent-core" }
caliban-provider   = { path = "../caliban-provider" }
caliban-sessions   = { path = "../caliban-sessions" }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
chrono             = { workspace = true }
dirs               = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["fs", "sync", "rt"] }
tracing            = { workspace = true }
tempfile           = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tempfile = { workspace = true }
caliban-provider = { path = "../caliban-provider", features = ["mock"] }
filetime         = "0.2"
tokio-util       = { workspace = true }
futures          = { workspace = true }
async-trait      = { workspace = true }

[lints]
workspace = true
