[package]
name        = "caliban-checkpoint"
version.workspace = true
description = "Per-prompt checkpoint + /rewind store for the caliban agent harness (ADR 0028) — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
caliban-common     = { workspace = true }
caliban-agent-core = { workspace = true }
caliban-provider   = { workspace = true }
caliban-sessions   = { workspace = true }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
chrono             = { workspace = true }
dirs               = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["fs", "sync", "rt"] }
tracing            = { workspace = true }
tempfile           = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tempfile = { workspace = true }
caliban-provider = { workspace = true, features = ["mock"] }
filetime         = "0.2"
tokio-util       = { workspace = true }
futures          = { workspace = true }
async-trait      = { workspace = true }

[lints]
workspace = true
