[package]
name        = "caliban-images"
version.workspace = true
description = "Image ingest pipeline + graphics-protocol detection for caliban"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
publish     = false

[features]
default   = ["clipboard"]
clipboard = ["dep:arboard"]

[dependencies]
caliban-common   = { path = "../caliban-common" }
caliban-provider = { path = "../caliban-provider" }
serde       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
sha2        = { workspace = true }
base64      = { workspace = true }
image       = { workspace = true }
infer       = { workspace = true }
arboard     = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
