[package]
name        = "caliban-images"
version.workspace = true
description = "Image ingest pipeline + graphics-protocol detection for caliban — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[features]
default   = ["clipboard"]
clipboard = ["dep:arboard"]

[dependencies]
caliban-common   = { workspace = true }
caliban-provider = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
sha2        = { workspace = true }
base64      = { workspace = true }
image       = { workspace = true }
infer       = { workspace = true }
arboard     = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
