[package]
name        = "caliban-mcp-client"
version     = "0.0.0"
description = "MCP client (stdio v1) — connects to MCP servers and surfaces their tools as caliban Tools"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
publish     = false

[dependencies]
caliban-agent-core = { path = "../caliban-agent-core" }
caliban-provider   = { path = "../caliban-provider" }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tokio              = { workspace = true, features = ["process", "sync", "rt", "time", "io-util", "macros"] }
tokio-util         = { workspace = true }
dirs               = { workspace = true }
# Server features are pulled in too so the in-tree test_server binary
# (`src/bin/test_server.rs`) can build without a separate manifest. The release
# footprint of `server` + `transport-io` is small and a `cargo nextest` style
# build pulls them via dev-dependencies anyway.
rmcp               = { workspace = true, features = ["server", "transport-io", "macros", "schemars"] }
futures            = { workspace = true }
schemars           = { workspace = true }
http               = { workspace = true }
url                = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }
tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { workspace = true }
wiremock           = { workspace = true }
axum               = { workspace = true }

# In-tree test server binary used by integration tests via CARGO_BIN_EXE_test_server.
[[bin]]
name             = "test_server"
path             = "src/bin/test_server.rs"

[lints]
workspace = true
