[package]
name        = "caliban-mcp-client"
version.workspace = true
description = "MCP client (stdio v1) — connects to MCP servers and surfaces their tools as caliban Tools — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
caliban-common     = { workspace = true }
caliban-agent-core = { workspace = true }
caliban-provider   = { workspace = true }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tokio              = { workspace = true, features = ["process", "sync", "rt", "time", "io-util", "macros"] }
tokio-util         = { workspace = true }
dirs               = { workspace = true }
# Server features are pulled in too so the in-tree test_server binary
# (`src/bin/test_server.rs`) can build without a separate manifest. The release
# footprint of `server` + `transport-io` is small and a `cargo nextest` style
# build pulls them via dev-dependencies anyway.
rmcp               = { workspace = true, features = ["server", "transport-io", "macros", "schemars"] }
futures            = { workspace = true }
schemars           = { workspace = true }
http               = { workspace = true }
url                = { workspace = true }
# Phase C deps — OAuth + token storage + loopback callback server.
oauth2             = { workspace = true }
keyring            = { workspace = true }
axum               = { workspace = true }
reqwest            = { workspace = true }
chrono             = { workspace = true }
sha2               = { workspace = true }
base64             = { workspace = true }
rand               = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }
tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
tracing-subscriber = { workspace = true }
wiremock           = { workspace = true }
axum               = { workspace = true }
serde_json         = { workspace = true }

# In-tree test server binary used by integration tests via CARGO_BIN_EXE_test_server.
[[bin]]
name             = "test_server"
path             = "src/bin/test_server.rs"

# Mock gonzalo code-graph server used by the hermetic contract test in
# tests/gonzalo_integration.rs via CARGO_BIN_EXE_gonzalo_test_server (#344).
[[bin]]
name             = "gonzalo_test_server"
path             = "src/bin/gonzalo_test_server.rs"

[lints]
workspace = true
